# intmax2-contract

./: .env.example  .gitignore  .npmignore  .prettierrc.json  .solhint.json  .solhintignore  PUBLISHING.md  README.md  foundry.toml  hardhat.config.ts  old.env  package-lock.json  package.json  tsconfig.json
.openzeppelin/: sepolia.json  unknown-534351.json
contracts/: BlockBuilderInfoLib.sol  BlockBuilderRegistry.sol  IBlockBuilderRegistry.sol  IL1GasPriceOracle.sol  ILiquidity.sol  IPlonkVerifier.sol  IRollup.sol  Liquidity.sol  Rollup.sol
deployment-data/: localhost-deployedContracts.json
docs/: index.md
scripts/: 1_deployToL2.ts  2_deployToL1.ts  3_initializeOnL2.ts  constants.ts  contractAddresses.json  deployMockL1GasPriceOracle.ts  deployPlonkVerifier.ts  deployStep1ToL1.ts  deployStep1ToL2.ts  deployStep2ToL1.ts  deployStep2ToL2.ts  deployStep3ToL1.ts  deployStep3ToL2.ts  deployTestErc20.ts  depositERC20.ts  depositETH.ts  postWithdrawalRequests.ts  prepare-publish.js  processWithdrawals.ts  relayMessageFromL2ToL1.ts  sendMessageFromL1ToL2.ts  sendMessageFromL2ToL1.ts  simpleRollupTest.ts  submitDeposits.ts  submitWithdrawals.ts  updateBlockBuilder.ts
src/: index.ts
test/: common.test.ts  common.ts  integration.test.ts  integration.ts  rollup.test.ts  rollup.ts  withdrawal.test.ts  withdrawal.ts
test_data/: block0.json  block1.json  block2.json  block3.json  withdrawal_info.json  (+1 more)
test_data_generator/: Cargo.toml  README.md
test_data_generator/src/: generate_test_data.rs  lib.rs
test_data_generator/test_data/: block1.json  block2.json  block3.json
(+422 files in other folders)
